--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
-	"name": "tehom",
-	"version": "0.0.0",
-	"private": false,
-	"description": "Inter-dependency management for mono-repos.",
-	"repository": "https://github.com/Renddslow/tehom",
-	"license": "MIT",
-	"author": "Matt McElwee <mubatt@wyopub.com>",
-	"main": "index.js",
-	"scripts": {},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
-	"lint-staged": {
-		"*.{js,css,json,md,ts,tsx}": [
-			"prettier --write"
-		]
-	},
-	"prettier": "@dmsi/prettier-config"
+  "name": "tehom",
+  "version": "0.0.0",
+  "private": false,
+  "description": "Inter-dependency management for mono-repos.",
+  "repository": "https://github.com/Renddslow/tehom",
+  "license": "MIT",
+  "author": "Matt McElwee <mubatt@wyopub.com>",
+  "main": "index.js",
+  "scripts": {},
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,css,json,md,ts,tsx}": [
+      "prettier --write"
+    ]
+  },
+  "prettier": "@dmsi/prettier-config",
+  "devDependencies": {
+    "@dmsi/prettier-config": "^1.3.0",
+    "@types/node": "^13.7.4",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.0.8",
+    "prettier": "^1.19.1",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.8.2"
+  }
 }
