--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "tehom",
-  "version": "0.0.0",
-  "private": false,
+  "private": true,
   "description": "Inter-dependency management for mono-repos.",
   "repository": "https://github.com/Renddslow/tehom",
   "license": "MIT",
   "author": "Matt McElwee <mubatt@wyopub.com>",
-  "main": "index.js",
   "scripts": {
-    "build": "tsc -d"
+    "build": "lerna run build"
   },
+  "workspaces": [
+    "packages/**"
+  ],
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -25,6 +26,7 @@
     "@dmsi/prettier-config": "^1.3.0",
     "@types/node": "^13.7.4",
     "husky": "^4.2.3",
+    "lerna": "^3.20.2",
     "lint-staged": "^10.0.8",
     "prettier": "^1.19.1",
     "ts-node": "^8.6.2",
